bug 1341414 - Functions like GetBoolVarCache shouldn't assert when used early in startup r=billm