modules/libpref/prefapi.cpp
@@ -737,11 +737,20 @@ static PrefTypeFlags pref_SetValue(PrefValue* existingValue, PrefTypeFlags flags
 #ifdef DEBUG
 static pref_initPhase gPhase = START;
 
+static bool gWatchingPref = false;
+
 void
 pref_SetInitPhase(pref_initPhase phase)
 {
     gPhase = phase;
 }
+
+void
+pref_SetWatchingPref(bool watching)
+{
+    gWatchingPref = watching;
+}
+
 
 struct StringComparator
 {
@@ -774,7 +783,7 @@ PrefHashEntry* pref_HashTableLookup(const char *key)
      * Consider moving it later or add it to the whitelist in ContentPrefs.cpp
      * and get review from a DOM peer
      */
-    MOZ_ASSERT((!XRE_IsContentProcess() || gPhase > END_INIT_PREFS || inInitArray(key)),
+    MOZ_ASSERT((!XRE_IsContentProcess() || gPhase > END_INIT_PREFS || gWatchingPref || inInitArray(key)),
                "accessing non-init pref before the rest of the prefs are sent");
     return static_cast<PrefHashEntry*>(gHashTable->Search(key));
 }
